# akshare-jc-mcp

./: README.md  pyproject.toml  test_batch.py  test_direct_api.py  test_fast.py  test_fast2.py  test_hist_analysis.py  test_indicators.py  test_mcp.py  test_mcp_check.py  test_no_one.py  test_realtime.py  test_realtime2.py  test_realtime3.py  test_realtime4.py
src/akshare_jc_mcp/: __main__.py  server.py
src/akshare_jc_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
