[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akshare-jc-mcp"
version = "0.1.0"
description = "Unified MCP server for Chinese stock market data, replacing akshare-one-mcp"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0.0",
    "akshare-one>=0.3.9",
]

[tool.setuptools.packages.find]
where = ["src"]
